# src/main/java/fr/lepgu/palaisdivin/backend/review/adapters/rest/CreateReviewRequest.java
@@ -1,0 +1,7 @@
+package fr.lepgu.palaisdivin.backend.review.adapters.rest;
+
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.Size;
+
+public record CreateReviewRequest(@Min(1) @Max(5) int rating, @Size(max = 1000) String comment) {}
